Continued writing report

--- a/R/twitter_data.Rmd
+++ b/R/twitter_data.Rmd
@@ -2,9 +2,7 @@
 title: '@jumping_uk Twitter Analysis'
 author: "David Saipe"
 date: '2022-07-06'
-output: html_document
-fig_width: 6
-fig_height: 4
+output: word_document
 ---
 
 ```{r setup, include=FALSE}
@@ -19,11 +17,12 @@ library(tidyr)
 library(magrittr)
 library(tidytext)
 library(ggwordcloud)
+library(plotrix)
 ```
 
-## Introduction
+# Introduction
 
-The @jumping_uk account has been active since March 2016 and has almost 8000 followers. The account is currently posting very regularly (most weekdays). The graph below shows how many tweets @jumping_uk have posted each year since joining twitter. 
+The @jumping_uk account has been active since March 2016 and has almost 8000 followers. The account is currently posting very regularly (most weekdays). This year, the account is currently on track to posting its most tweets in one year.
 
 ```{r jr timeline, echo = FALSE, }
 jr_timeline = read.csv("Data/jr_timeline.csv")
@@ -36,13 +35,6 @@ jr_timeline %<>%
          year = year(created_at))
 jr_timeline$status_id = gsub("x", "", as.character(jr_timeline$status_id))
 
-ggplot(jr_timeline, aes(year)) +
-  geom_point(stat = "count") +
-  geom_line(stat = "count") +
-  xlim(2017,2021) +
-  theme_classic() +
-  xlab("Year") +
-  ylab("Number of Tweets")
 ```
 
 This report will look into several factors that affect levels of engagement on Twitter - including what day and time a tweet is posted, the use of hashtags and the use of media. I have used the RTweet package to get the data for this analyses, and have primarily been looking at data from the @jumping_uk timeline, as well as general tweets using the hashtag #rstats. 
@@ -57,43 +49,29 @@ rstats %<>%
          hour_posted = hour(created_at))
 ```
 
-## Best day of the week to post
+# Time Posted
 
-It is widely agreed upon that tweets posted on the weekend will receive less engagement from the users audience. @jumping_uk's timeline corroborates with this. Tweets posted on Saturdays and Sundays have generally received significantly less retweets and likes. 
+## Days of the Week
+
+There is mixed opinion about whether tweets posted on the weekend receive as much interaction as those posted during in the week. The best day to post a tweet usually depends on the type of content that is being posted, and the account it is being posted from. For example, one article suggests that the best time to post about consumer goods is on the weekend, whereas the best time to post for technical business is during the week. @jumping_uk’s timeline corroborates with this idea as tweets that are posted on Saturdays and Sundays usually receive less retweets and likes, compared to tweets posted during the week.
 
 ```{r day of the week, echo = FALSE}
 by_weekday = jr_timeline %>%
-  mutate(day = wday(created_at))
+  mutate(day = wday(created_at, label = TRUE, abbr = TRUE, week_start = getOption("lubridate.week.start", 1)))
 
-avg_weekday = by_weekday %>%
-  group_by(day) %>%
-  summarise(avg_rt = mean(retweet_count), 
-            avg_fav = mean(favorite_count))
-avg_weekday$day = c("Sun", "Mon", "Tue", "Wed", 
-                    "Thu", "Fri", "Sat")
-avg_weekday$day = factor(avg_weekday$day,
-                         c("Mon", "Tue", "Wed", 
-                           "Thu", "Fri", "Sat", "Sun"))
-
-avg_weekday %>%
-  pivot_longer(cols = c("avg_rt", "avg_fav"),
-               names_to = c("avg_interactions"),
-               values_to = c("count")) %>%
-                 ggplot(aes(day, count, fill = avg_interactions)) + 
-  geom_col(position = "dodge") +
+ggplot(by_weekday, aes(day, interactions)) +
+  geom_boxplot(fill = "#d95f02") +
   labs(caption = "Taken from @jumping_uk timeline from 2016 to 2022") +
   xlab("Day") +
   ylab("Average Interactions") +
-  scale_fill_brewer(palette = "Dark2",
-                    name = "",
-                    labels = c("Likes", "Retweets")) +
+  scale_y_log10() +
   theme_classic()
 ```
+In recent months the account has only been posting on weekdays, and this seems to be the right thing to be doing. More important tweets could start being posted on Mondays and Tuesdays, although there is little evidence to suggest that this would be beneficial.
 
-## Time posted
+## Hour of the Day
 
-From looking at the @jumping_uk timeline, there are two average peaks in 
-engagement: one from 9-12am, and another from 3-6pm, as shown below. 
+From looking at the @jumping_uk timeline, tweets posted between 8-11am have generally received the highest number of interactions. There are however spikes in engagement from 2pm onwards.
 
 ```{r time posted, echo = FALSE}
 avg_interactions = jr_timeline %>%
@@ -152,9 +130,8 @@ am +
   pm
 ```
 
-It should also 
-be taken into account that around 75% of @rstatstweet followers are from America, 
-so tweets containing #rstats may receive more engagement in the afternoon.
+The difference in the locations of morning retweeters and afternoon retweeters means that tweets can be targeted to specific audiences through the time that they are posted. For example, tweets about the ongoing RStudio Conference may receive more interaction when tweeted between 2pm-4pm, as the conference is being held in Washington.
+It should also be taken into account that most @rstatstweet followers are from America, so the impact of using #rstats will be more significant in the afternoon.
 
 ```{r rstats follower locations, echo = FALSE}
 rstats_followers = read.csv("Data/rstats_followers2.csv")
@@ -174,11 +151,11 @@ ggplot(rstats_followers,
   theme_void()
 ```
 
+Despite this, it is important to tweet during both peaks of the day. Tweets come and go off the timeline very quickly so it’s important to post and multiple times of the day to ensure it reaches as many followers as possible.
+
 ## Images
 
-As predicted, images do affect levels of engagement positively. The figure below 
-shows the average levels of interaction for tweets with no media and tweets with 
-photos, taken from both the #rstats timeline and the @jumping_uk timeline.
+Images do affect levels of engagement positively. The figure below shows the average levels of interaction for tweets with no media and tweets that include a photo, taken from both the #rstats timeline and the @jumping_uk timeline.
 
 ```{r images, echo = FALSE}
 rstats = rstats[-c(29, 3913),]
@@ -210,11 +187,11 @@ avg_interactions %>%
   theme_classic()
 ```
 
+Including images is a good start to increasing engagement. Having consistent branding is also important for keeping the page professional looking. Images can also be used to include information can can’t be compressed into 280 characters.
+
 ## Hashtags
 
-Below are the top 30 hashtags used alongside #rstats, taken from the most 
-popular tweets containing #rstats (07/07 - 14/07). The impact of some of these 
-hashtags when used alongside #rstats are shown below. 
+There are multiple bots on twitter that retweet tweets containing #rstats (@rstatstweet and @rstats4ds are the two main ones). This hashtag should always be included in @jumping_uk tweets. Below are the top 30 most commonly used hashtags alongside #rstats, taken from the 100 most popular tweets containing #rstats (07/07 - 14/07). 
 
 ```{r hashtags wordcloud, echo = FALSE}
 rstats_top = rstats %>%
@@ -232,9 +209,7 @@ hashtag_count %>%
   theme_void()
 ```
 
-@jumping_uk uses #datascience, #python, #tidyverse and #shiny most often. 
-The bar chart below shows the impact of these four hashtags when used 
-alongside #rstats.
+Other than #rstats, @jumping_uk uses #datascience, #python, #tidyverse and #shiny most often. The bar chart below shows the impact of these four hashtags when used alongside #rstats. They all improve engagement, so should continue to be used when relevant.
 
 ```{r jr hashtags, echo = FALSE}
 jr_hashtags = tibble(
@@ -266,8 +241,7 @@ jr_hashtags %>%
         plot.title = element_text(hjust = 0.3))
 ```
 
-@jumping_uk doesn't use #machinelearning and #bigdata as often but the figure below shows that these have a significant impact on engagement, 
-and so they could be used more often in the future. 
+@jumping_uk doesn’t use #machinelearning and #bigdata as often; these are two hashtags that are often found in the most popular tweets on the #rstats timeline. The figure below shows that these have a significant impact on engagement on #rstats tweets, and so they could be used more often in the future.
 
 ```{r rstats hashtags, echo = FALSE}
 rstats_hashtags = tibble(
@@ -297,22 +271,15 @@ rstats_hashtags %>%
 
 ```
 
-There are also hashtag trends such as #100daysofcode and #tidytuesdays which 
-could be good ways to appear more on the RStats community timeline (there are 
-two accounts that retweet all tweets with #100daysofcode). 
+There are also hashtag trends such as #100daysofcode and #tidytuesdays which could be good ways to appear more on the RStats community timeline. There are two accounts that retweet all tweets with #100daysofcode.
+It is also important not to include too many hashtags, as this can appear to be ‘spammy’, causing users to scroll straight past without reading the content of the tweet. A good way to use hashtags can be by including it in the main bulk of the tweet where the word in question would be appearing anyway.
 
-```{r retweeters, echo = FALSE}
-retweeters = read.csv("Data/retweeters.csv")
+# Conclusion
 
-jr = c("csgillespie", "nrennie35", "StatsRhian", 
-       "MandyNorrbo", "clayyb93", "AbrahamsAmieroh",
-       "jwalton3141", "parisagregg", "haematobot",
-       "_jcken", "TimBrock_DtD")
+The factors analysed in this report have an effect on the levels of engagement with @jumping_uk tweets to varying extents.
+There are indeed optimum times of the day to post on twitter. However, because of the difference in audience during the morning and afternoon, the best thing would be to post twice a day. Tweets can be tailored this way to match the receiving audience, with afternoon tweets being targeted towards American users, and morning tweets being targeted towards users in Asia and Africa.
+It was already apparent that images were increasing the numbers of likes and retweets on @jumping_uk posts, and this analysis has helped confirm that. It is always appropriate to include images in tweets, and when a URL is included within the body of a tweet, it is important to ensure that a summary card appears when the tweet is posted.
+@jumping_uk are already using some of the main hashtags used alongside #rstats in popular tweets. There are some hashtags which could be used more, such as #bigdata, #machinelearning, #programming, and #datascientist. It would also be worth following some of the #rstats bots, as they don’t always retweet #rstats tweets.
 
-retweeters %<>%
-  mutate(jumping_rivers = screen_name %in% jr) %>%
-  select(user_id, screen_name, followers_count, jumping_rivers)
-
-```
 
 
